# phone-prices

./: .gitignore  .pre-commit-config.yaml  README.md  config.dvc  models.dvc  pyproject.toml
.dvc/: config
src/: predict.py  train.py
src/config/: default.yaml.dvc
src/configs/: predict.yaml  train.yaml
src/configs/data/: setup2.yaml
src/configs/model/: logistic_regression.yaml  random_forest.yaml  svm.yaml
src/mlflow/: move_to_reg.py  to_prod.py
src/phone_price/: data_loader.py  data_preprocessor.py  model_saver.py  model_trainer.py  train.py  utils.py  wrapper.py
src/services/: run_mlflow.sh  run_mlflow_serve.sh
tests/: noop_test.py  pytest.ini
