[project]
name = "phone-price"
description = "An ML-powered tool that accurately predicts smartphone market prices by analyzing key features."
dynamic = ["version"]
authors = [
  { name = "Krasnopyorova Alyona", email = "kra.salyona.e@gmail.com" },
    { name = "Chernov Ivan", email = "meow@gmail.com" },
      { name = "Makanin Kirill", email = "meow@gmail.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "dvc-s3>=3.2.2",
    "joblib>=1.5.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytorch-lightning>=2.5.6",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "pytest",
  "pytest-cov",
]

[build-system]
requires = [
  "hatchling",
  "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "I",    # isort
  "E",    # pycodestyle
  "W",    # pycodestyle
  "F",    # pyflakes
  "N",    # pep8-naming
  "D",    # pydocstyle
  "PL",   # pylint
  "S",    # flake8-bandit
  "Q",    # flake8-quotes
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
]
ignore = [
  "PLC0414",  # useless-import-alias
  "D105",     # undocumented-magic-method
  "D100",  # Missing docstring in public module
  "D203",  # конфликт с D211
  "D212",  # конфликт с D213
  "D417",  # Missing argument description in docstring
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]  # undocumented-public-package
"**/{tests}/*" = [
  "S101",     # allow-assert
  "PLR2004",  # magic-value-comparison
  "E731",     # lambda-assignment
  "D100",     # undocumented-public-module
  "D101",     # undocumented-public-class
  "D102",     # undocumented-public-method
  "D103",     # undocumented-public-function
  "D104",     # undocumented-public-package
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pyright]
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false

[tool.yamlfix]
line_length = 120
explicit_start = false
sequence_style = "keep_style"
whitelines = 1
section_whitelines = 1
